# permutation-decoding

./: CMakeLists.txt  PermutationDecoding.sln  README.md
Builder/: Builder.vcxproj  Builder.vcxproj.filters
Core/: Core.vcxproj  Core.vcxproj.filters
Decoder/: Decoder.vcxproj  Decoder.vcxproj.filters
examples/: spec_ebch_1024_512_24  spec_rand-perm_256_128_8_0  spec_rand_1024_512_16_48  spec_rand_256_128_8_32
include/: Common.h  NTLHelp.h  Simulate.hpp  Specification.h  Utils.hpp
include/Construct/: Frozen.h  Perm.hpp  PolarSubcode.h
include/Linalg/: BinMatrix.h  BinVector.h  Field.h
include/PolarCode/: AutBPDecoder.h  BPDecoder.h  BPPermSCDecoder.h  Encoder.h  PermBPDecoder.cpp  PermBPDecoder.h  PermSCDecoder.h  SCDecoder.h  SCLDecoder.h
include/PolarSubcode/: AutSCDecoer.h  Encoder.h  PermSCDecoder.h  PermSCLDecoder.h  SCDecoder.h  SCLDecoder.h
src/: NTLHelp.cpp  Specification.cpp  Utils.cpp  builder_main.cpp  decoder_main.cpp  main.cpp
src/Construct/: Frozen.cpp  FrozenSet.cpp  FrozenSet.h  Perm.cpp  PermSet.cpp  PermSet.h  PolarSubcode.cpp  PolarSubcode.h
src/Linalg/: BinVector.cpp  Field.cpp
src/PolarCode/: AutBPDecoder_PC.cpp  BPDecoder_PC.cpp  BPPermSCDecoder_PC.cpp  Encoder_PC.cpp  PermSCDecoder_PC.cpp  SCDecoder_PC.cpp  SCLDecoder_PC.cpp
src/PolarSubcode/: AutSCDecoder.cpp  Encoder.cpp  PermSCDecoder.cpp  PermSCLDecoder.cpp  SCDecoder.cpp  SCLDecoder.cpp
src/codec/: AutDecoder.cpp  AutDecoder.h  CRCPermSCLDecoder.cpp  CRCPermSCLDecoder.h  ConstituentPermSCLDecoder.cpp  ConstituentPermSCLDecoder.h  Decoder.h  FastSCDecoder.cpp  (+13 more)
(+16 files in other folders)
